# Proyecto_ComputacionGraficaAvanzada

./: CMakeLists.txt
14-ProyectoFinal/: CMakeLists.txt
14-ProyectoFinal/src/: Application.cpp  Application.h  BolosScene.cpp  BolosScene.h  CasinoScene.cpp  CasinoScene.h  Globals.cpp  Globals.h  PuebloScene.cpp  PuebloScene.h  README_MODULARIZACION.txt  RenderUtils.cpp  RenderUtils.h  Scene.h  SceneManager.cpp  SceneManager.h  main.cpp
AssetsPfinal/Articulos de Calle/: BancasdeCalle.fbx  BaurerosAzul.fbx  Faroles.fbx  Kiosko.fbx  Letreros.fbx  Parquimetro.fbx
AssetsPfinal/Boliche/: boliche.fbx
AssetsPfinal/Casas/: BANQUETA_MODELADA.fbx  CasaLateral.fbx  CasaRosa.fbx
AssetsPfinal/Casas/EscenarioCasino/: EscenarioCasino.fbx
AssetsPfinal/Casas/PortalesGrandes/: PortalesGrandes.fbx
AssetsPfinal/Casino/: EscenarioCasino.fbx
AssetsPfinal/DecoracionesCalle/: CasinoBare.fbx  Meshy_AI_Large_town_map_pinned_0306044537_texture.fbx  Meshy_AI_Old_delivery_list_cli_0306044528_texture.fbx  Meshy_AI_Small_metal_storage_b_0306044546_texture.fbx  ObjetoAcuerdos.fbx  ObjetoGrabadora1.fbx  blackjackMar.fbx  bolabolicheObjeto.fbx  botellasMar.fbx  bowlingalleyMar.fbx  canicasMar.fbx  cartaObjeto.fbx  fichasObjeto.fbx  fuerzaMar.fbx  gametableMar.fbx  oroMar.fbx  registrosObjeto.fbx  ruedafortunaMar.fbx  ruletaMar.fbx  tacosMar.fbx
AssetsPfinal/Objetos/Objeto01/: Objeto01.fbx
AssetsPfinal/Objetos/Objeto02/: Objeto02.fbx
AssetsPfinal/Objetos/Objeto03/: Objeto3.fbx
AssetsPfinal/Personajes/: Anger.fbx  EvilQueenBowling.fbx  FURY.fbx  Fall Flat.fbx  Fury MainMenu.fbx  FuryBowling.fbx  FuryCharacter.fbx  QUEENCASINO.fbx
AssetsPfinal/Personajes/EvilQueen/: EvilQueenCharacter.fbx  EvilQueenWalking.fbx
AssetsPfinal/Personajes/Perry/: Perry_Idle.fbx  Perry_Walking02.fbx
AssetsPfinal/Personajes/panic/: panic.fbx
AssetsPfinal/Prueba/: prueba.fbx
AssetsPfinal/TexturesP/: Application_COMPLETO_ARREGLADO.cpp
CGALib/: CGALib.vcxproj  CMakeLists.txt
CGALib/include/Headers/: Colisiones.h  FontTypeRendering.h
CGALib/src/: FontTypeRendering.cpp  Model.cpp
Shaders/: Fresnel.fs  Fresnel.vs  depthTesting.fs  skyBox.fs  skyBox.vs  terrain.fs  terrain.vs
